# guitar_scale_svg

./: Cargo.toml
ableton-guitar-sample/120bpm-guitar_with_space Project/: 120bpm-guitar_with_space.als
ableton-guitar-sample/120bpm-guitar_with_space Project/Ableton Project Info/: Project8_1.cfg
examples/: copy_audio.rs  generate_json.rs  generate_multiple.rs  generate_single.rs  piano.rs
renoise_guitar_split/: guitar_split.xrns
src/: interval.rs  lib.rs  note.rs  scale.rs  tuning.rs
src/svg_draw/: mod.rs  scale.rs  settings.rs
temp_audio/: convert_mp3.sh
ukebox/: .cargo_vcs_info.json  Cargo.toml
ukebox/src/: interval.rs
