[package]
name = "guitar_scale"
version = "0.1.0"
authors = ["stephaneworkspace <stephane@bressani.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.9.1"
ukebox = "0.7.0"
strum = "0.17.1"
strum_macros = "0.17.1"

[dev-dependencies]
rstest = "0.5"
indoc = "0.3"
