[package]
name = "guitar_scale"
version = "0.1.0"
authors = ["stephaneworkspace <stephane@bressani.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.9.1"
ukebox = { path = "./ukebox" }
strum = "0.17.1"
strum_macros = "0.17.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

[dev-dependencies]
rstest = "0.5"
indoc = "0.3"
